--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,15 @@ header {
     background-color: green;
     padding: 20px;
     padding-left: 50px;
+    box-shadow: 10px 10px 10px rgb(33, 36, 33);
+}
+
+dialog {
+    min-width: 400px;
+    border-radius: 20px;
+    background-color: darkgreen;
+    border: 2px solid green;
+    top: 25%;
 }
 
 #tasks-list {
@@ -35,13 +44,18 @@ header {
     display: flex;
     gap: 10px;
     flex: auto;
-    padding: 5px;
+    padding: 10px;
     align-items: center;
+    border-radius: 20px;
+    transition: .3s;
 }
 
 .completed {
-    text-decoration: dashed;
     background-color: grey;
+}
+
+.completed div {
+    text-decoration: line-through;
 }
 
 .task-title {
@@ -64,6 +78,7 @@ main {
 
 aside {
     background-color: darkgreen;
+    box-shadow: 10px 10px 10px rgb(33, 36, 33);
 }
 
 .navbar h1 {
@@ -74,6 +89,10 @@ aside {
 .dialog-buttons {
     display: flex;
     justify-content: space-evenly;
+}
+
+.dialog-buttons button {
+    background-color: green;
 }
 
 dialog div form {
@@ -90,10 +109,8 @@ dialog div form {
 .navbar button {
     width: 100%;
     text-align: left;
-    background-color: darkgreen;
-    color: white;
-    border: 0px;
-    transition: background-color 0.3s;
+    padding-left: 30px;
+    border-radius: 0px;
 }
 
 #content {
@@ -116,10 +133,28 @@ footer {
 }
 
 button {
-    padding: 10px;
+    padding: 15px;
     font-size: large;
+    background-color: darkgreen;
+    color: white;
+    border: 0px;
+    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+    border-radius: 20px;
 }
 
 button:hover {
-    background-color: green;
+    background-color: darkseagreen;
+    cursor: pointer;
+    box-shadow: 5px 5px 5px rgb(33, 36, 33);
+    transform: translateY(-5px);
+}
+
+.task:hover {
+    box-shadow: 5px 5px 5px rgb(33, 36, 33);
+    transform: scale(1.01);
+}
+
+button:active {
+    background-color: darkseagreen;
+    cursor: pointer;
 }
