--- a/src/styles.css
+++ b/src/styles.css
@@ -17,10 +17,17 @@ body {
 }
 
 header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-color: green;
     padding: 20px;
     padding-left: 50px;
     box-shadow: 10px 10px 10px rgb(33, 36, 33);
+}
+
+header h1 {
+    margin-right: auto;
 }
 
 dialog {
@@ -85,6 +92,7 @@ main {
 aside {
     background-color: darkgreen;
     box-shadow: 10px 10px 10px rgb(33, 36, 33);
+    min-width: 250px;
 }
 
 .navbar h1 {
@@ -111,6 +119,7 @@ dialog div form {
 
 #new-task-btn {
     margin: 30px;
+    font-size: 2;
 }
 .navbar button {
     width: 100%;
@@ -146,6 +155,14 @@ button {
     border: 0px;
     transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
     border-radius: 20px;
+    display: flex;
+    align-items: center;
+}
+
+svg {
+    width:30px;
+    margin: 10px;
+    fill: white;
 }
 
 button:hover {
